--- a/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa-list/pessoa-list.component.css
+++ b/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa-list/pessoa-list.component.css
@@ -1,3 +1,20 @@
-.full-width-table {
-  width: 100%;
+table {
+    margin-top: 30px;
+    width: 100%;
+}
+
+.opcoes {
+    cursor: pointer;
+}
+
+.edit {
+    margin-right: 10px;
+}
+
+.edit>i {
+    color: #d9cd26;
+}
+
+.delete>i {
+    color: #e35e6b
 }
