--- a/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa-list/pessoa-list.component.html
+++ b/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa-list/pessoa-list.component.html
@@ -1,21 +1,29 @@
-<div class="mat-elevation-z8">
-    <table mat-table class="full-width-table" matSort aria-label="Elements">
-        <!-- Id Column -->
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="pessoas">
+
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+            <th mat-header-cell *matHeaderCellDef>Id</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+            <th mat-header-cell *matHeaderCellDef>Nome</th>
             <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="opcoes">
+            <th mat-header-cell *matHeaderCellDef>Opcoes</th>
+            <td mat-cell *matCellDef="let row" class="opcoes">
+                <a class="delete" (click)="excluirPessoa(row.id)">
+                    <i class="material-icons">delete</i>
+                </a>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator [length]="dataSource?.data.length" [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 30]">
+    <mat-paginator [length]="length" [pageSize]="pageSize">
     </mat-paginator>
 </div>
