--- a/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa.component.css
+++ b/ObrasBibliograficasFrontEnd/src/app/components/pessoa/pessoa.component.css
@@ -3,3 +3,15 @@ form {
     flex-direction: column;
     padding-top: 20px;
 }
+
+.edit {
+    margin-right: 10px;
+}
+
+.edit>i {
+    color: #d9cd26;
+}
+
+.delete>i {
+    color: #e35e6b
+}
